# GameEngine

./: .gitignore  CMakeLists.txt
include/_OS/: Window.hpp
include/_Renderer/_Data/: MeshComponent.hpp  VAOLayout.hpp  Vertex.hpp
include/_Renderer/_GL/: ElementBufferObject.hpp  Renderer.hpp  Shader.hpp  VertexArrayObject.hpp  VertexBufferObject.hpp
include/_Renderer/_Mesh/: TemporaryMesh.hpp
include/_Tooling/: ErrorCheck.hpp
res/Shaders/TestShaders/: TestFragmentShader.glsl  TestVertexShader.glsl
src/: main.cpp
src/_OS/: Window.cpp
src/_Renderer/_GL/: ElementBufferObject.cpp  Renderer.cpp  Shader.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp
src/_Renderer/_Primitives/: TemporaryMesh.cpp
src/_Tooling/: ErrorCheck.cpp
